setting up assets folder

--- a/home.html
+++ b/home.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="css/css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
+  <link href="assets/css/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/css/main.css" rel="stylesheet">
   <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
-  <link rel="shortcut icon" href="./images/blackbox.jpeg">
+  <link rel="shortcut icon" href="assets/images/blackbox.jpeg">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
   <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="js/main.js" type="text/javascript"></script>
+  <script src="assets/js/main.js" type="text/javascript"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <!-- <link rel="stylesheet" href="animate.min.css"> -->
   <title>THE SUIT</title>
@@ -134,17 +134,17 @@
         <a class= "returnLink" href="file:///Users/allanawooley/Documents/PUI%20Assignment%207/home.html?v=4143">Return to Suit</a>
     </div>
     <div class="materialPic">
-      <img class="img-responsive" src="./images/materialLayers.png" alt="material layers">
+      <img class="img-responsive" src="assets/images/materialLayers.png" alt="material layers">
     </div>
     <div class="spaceUnderwearPic">
-      <img class="img-responsive" src="./images/spaceUnderwear.png" alt="space longjohns">
+      <img class="img-responsive" src="assets/images/spaceUnderwear.png" alt="space longjohns">
     </div>
     <div class="backpackPic">
-      <img class="img-responsive" src="./images/astronaut1.jpg" alt="primary life support subsystem backpack">
+      <img class="img-responsive" src="assets/images/astronaut1.jpg" alt="primary life support subsystem backpack">
     </div>
 </div>
     <!--create responsive images by-->
-        <div class="interactiveEMU"><img class="img-responsive" src="./images/EMUsuit.png" alt="EMU suit" usemap="suitMap" style="background-color: #16171200;"></p>
+        <div class="interactiveEMU"><img class="img-responsive" src="assets/images/EMUsuit.png" alt="EMU suit" usemap="suitMap" style="background-color: #16171200;"></p>
           <map name="suitMap">
             <div class="helmet" value="zoomOutLeft"><area shape="poly" coords="242,32,287,88,253,27,221,97,220,96,287,90,282,40,292,66,268,31,223,70,226,49"
               href="#" alt="Helmet page" data-toggle="tooltip" data-placement="bottom" title="Helmet!" class="tooltip suitPart"></div>
