--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
   <div id="midground"></div>
 <nav class="navbar">
     <div class="navbar-header">
-      <h1><a href="file:///Users/allanawooley/Documents/PUI%20Assignment%207/home.html?v=4143">The Suit</a></span></h1><a href="#" class="dropdown-toggle" data-toggle="dropdown"></a>
+      <h1><a href="file:///Users/allanawooley/Documents/PUI%20Assignment%207/home.html?v=4143">The Suit</a></h1><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="caret" style="border-width: 25px;"></a>
         <ul class="dropdown-menu nav-tabs">
           <li class="dropdown-item" id="helmetMenu"><a href="#">Helmet and Visor</a></li>
           <li class="dropdown-item" id="upperTorsoMenu"><a href="#">Hard Upper Torso Assembly</a></li>
