finish write-up

--- a/home.html
+++ b/home.html
@@ -17,11 +17,12 @@
   <title>THE SUIT</title>
 </head>
 
-<body class="cursor">
+<body>
+  <div class="cursor">
   <div id="midground"></div>
 <nav class="navbar">
     <div class="navbar-header">
-      <h1><a href="file:///Users/allanawooley/Documents/PUI%20Assignment%207/home.html?v=4143">The Suit</a></h1><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="caret" style="border-width: 25px;"></a>
+      <h1><a href="file:///Users/allanawooley/Documents/PUI%20Assignment%207/home.html?v=4143">The Suit</a></h1><a href="#" class="dropdown-toggle" data-toggle="dropdown"></a>
         <ul class="dropdown-menu nav-tabs">
           <li class="dropdown-item" id="helmetMenu"><a href="#">Helmet and Visor</a></li>
           <li class="dropdown-item" id="upperTorsoMenu"><a href="#">Hard Upper Torso Assembly</a></li>
@@ -174,6 +175,7 @@
     <p class="container curious" style="background-color: #16171200;">A single Extravehicular Mobility Unit (EMU) can weigh over 220 pounds. Luckily, the lower gravity of space makes this feel much lighter.</p>
   </div>
   </div>
+</div>
 </div>
 </body>
 </html>
